--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,9 @@ Flask-WTF==1.2.1
 Werkzeug==2.3.7
 python-dotenv==1.0.0
 gunicorn==20.1.0
-psycopg2-binary # For PostgreSQL (can remove if only local SQLite)
+psycopg2-binary # For PostgreSQL (remove if only local SQLite)
 pandas==2.2.0
 openpyxl==3.1.2
-email_validator==2.1.1 # Added for email validation
-cloudinary==1.38.0 # For cloud file storage
+email_validator==2.1.1
+cloudinary==1.38.0
+Flask-Session==0.8.0 # <--- ADD THIS LINE
